[incubator-kie-issues#1206_reimplement_visitor] WIP - broken